# aemeath

./: .gitignore  README.md  aemeath.spec  build_nuitka.py  pyproject.toml
.github/workflows/: release.yml
assets/gifs/: README.md
assets/icons/: README.md
src/aemeath/: __init__.py  __main__.py  app.py  config.py  cursor.py  pet.py  sprite.py
